hopper fixes