@@ -6,13 +6,10 @@ import cc.cassian.bigger_fish.registry.BiggerFishComponentTypes;
 import cc.cassian.bigger_fish.registry.BiggerFishLootTables;
 import cc.cassian.bigger_fish.registry.BiggerFishTags;
 import cc.cassian.bigger_fish.registry.FishSize;
-import com.llamalad7.mixinextras.injector.wrapoperation.Operation;
-import folk.sisby.kaleido.lib.quiltconfig.api.values.TrackedValue;
 import net.minecraft.client.Minecraft;
 import net.minecraft.client.resources.language.I18n;
 import net.minecraft.core.component.DataComponents;
 import net.minecraft.core.registries.Registries;
-import net.minecraft.network.chat.Component;
 import net.minecraft.resources.Identifier;
 import net.minecraft.resources.ResourceKey;
 import net.minecraft.server.ReloadableServerRegistries;
@@ -32,44 +29,7 @@ import java.util.ArrayList;
 import java.util.List;
 import java.util.function.Supplier;
 
-import static cc.cassian.bigger_fish.BiggerFishMod.MOD_ID;
-
 public class ModHelpers {
-
-    /**
-     * Automatically generate translation keys for config options.
-     */
-    public static Component fieldName(TrackedValue<?> field) {
-        return Component.translatable("config.%s.%s".formatted(MOD_ID, toSnakeCase(field.key().toString())));
-    }
-
-    public static String toSnakeCase(String field) {
-        return field.replaceAll("([a-z])([A-Z]+)", "$1_$2").toLowerCase();
-    }
-
-    /**
-     * Automatically generate translation keys for config tooltips. Relies on custom tooltip wrapping.
-     */
-
-    public static Component fieldTooltip(TrackedValue<?> field) {
-        String tooltipKey = "config.%s.%s.tooltip".formatted(MOD_ID, toSnakeCase(field.key().toString()));
-        if (I18n.exists(tooltipKey))
-            return Component.translatable(tooltipKey);
-        return Component.empty();
-    }
-
-    /**
-     * Set a config field.
-     */
-    public static void fieldSetter(boolean instance, TrackedValue<Boolean> field) {
-        field.setValue(instance);
-    }
-    public static void fieldSetter(Integer instance, TrackedValue<Integer> field) {
-        field.setValue(instance);
-    }
-    public static void fieldSetter(String instance, TrackedValue<String> field) {
-        field.setValue(instance);
-    }
 
     public static FishSize getRandomFishSize(Entity hook) {
         var random = hook.getRandom();
@@ -94,8 +54,7 @@ public class ModHelpers {
     }
 
     public static String getFishSize(FishSize size) {
-        if (size == null) return "0";
-        if (BiggerFishMod.CONFIG.tooltip.centimeters.value()) {
+		if (BiggerFishMod.CONFIG.tooltip.centimeters.value()) {
             return "%s".formatted(Math.round(size.size() * 2.54 * 10d) / 10d);
         } else {
             return "%s".formatted(size.size());
@@ -108,7 +67,6 @@ public class ModHelpers {
             list.add(itemDeferredSupplier.get().getDefaultInstance());
         }
         return list;
-
     }
 
     public static boolean isAllowedInBaitedRod(ItemStack stack) {
@@ -119,7 +77,7 @@ public class ModHelpers {
         if (item.has(DataComponents.BUNDLE_CONTENTS)) {
             BundleContents bundleContents = item.get(DataComponents.BUNDLE_CONTENTS);
             if (bundleContents != null && !bundleContents.isEmpty())
-                return bundleContents.items().get(0).getOrDefault(BiggerFishComponentTypes.HOOK_EFFECTS.get(), "vanilla");
+                return bundleContents.items().getFirst().getOrDefault(BiggerFishComponentTypes.HOOK_EFFECTS.get(), "vanilla");
         }
         return "";
     }
@@ -132,7 +90,7 @@ public class ModHelpers {
         return Minecraft.getInstance().hasShiftDown();
     }
 
-    public static LootTable fish(ReloadableServerRegistries.Holder reloadableRegistries, ItemStack bait, boolean isLavaHook, boolean catchesBiggerFish) {
+    public static @Nullable LootTable fish(ReloadableServerRegistries.Holder reloadableRegistries, @Nullable ItemStack bait, boolean isLavaHook, boolean catchesBiggerFish) {
         if (isLavaHook) {
             return reloadableRegistries.getLootTable(BiggerFishLootTables.LAVA_FISHING);
         }
